Rename to turbo delay and follow json key naming conventions

--- a/main-ui/config.json
+++ b/main-ui/config.json
@@ -1,5 +1,5 @@
 {
     "theme": "SPRUCE",
-    "theme_dir": "/mnt/SDCARD/Themes/",
-    "holdDelayMs": 300
+    "themeDir": "/mnt/SDCARD/Themes/",
+    "turboDelayMs": 300
 }
